Remove demo mode functionality